--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,6 @@
 {
 	"folder_id": "example",
+	"token": "example",
 	"source_image_family": "example",
 	"ssh_username": "example",
 	"platform_id": "example",
